force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__CreatedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreatedById__c</fullName>
    <label>Created By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreatedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>