force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationInMinutes__c</fullName>
    <label>Duration In Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationInMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>