force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__DurationSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationSource__c</fullName>
    <label>Duration Source</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>