force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__IsBlindCycleCounting__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsBlindCycleCounting__c</fullName>
    <label>Blind Cycle Counting</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsBlindCycleCounting</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>