force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__IsUsedForInventoryProjection__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUsedForInventoryProjection__c</fullName>
    <label>Is Used For Inventory Projection</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUsedForInventoryProjection</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>