force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__rel_1702009449394_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009449394_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkType_LastModifiedById_map_User_I_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>WorkType_LastModifiedById_map_User_I_rel</relationshipLabel>
    <relationshipName>rel_1702009449394_end</relationshipName>
    <type>Lookup</type>
</CustomField>