force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__rel_1702009450317_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009450317_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkType_OperatingHoursId_map_Operat_rel</label>
    <referenceTo>ssot__OperatingHours__dlm</referenceTo>
    <relationshipLabel>WorkType_OperatingHoursId_map_Operat_rel</relationshipLabel>
    <relationshipName>rel_1702009450317_end</relationshipName>
    <type>Lookup</type>
</CustomField>