force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__ShouldAutoCreateSvcAppt__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldAutoCreateSvcAppt__c</fullName>
    <label>Should Auto Create Svc Appt</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldAutoCreateSvcAppt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>