force-app/main/default/objects/ssot__WorkType__dlm/fields/ssot__WorkType_OwnerId_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkType_OwnerId_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkType_OwnerId_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>WorkType_OwnerId_map_User_Id_N_1</relationshipLabel>
    <relationshipName>WorkType_OwnerId_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>